# nm-otool

./: .gitignore  CMakeLists.txt  Makefile  find_flag.sh  ft_nm  ft_nm_i386  ft_nm_x86_64  ft_otool  ft_otool_i386  ft_otool_x86_64  test.sh
bin_test/: auvaltool  python3.4-32  sqlite3  uuidgen  vmmap32  yacc  zcat  zipinfo  zprint
correct/: correct  history
includes/: libft.h  nmotool.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/: ft_atoi.c  ft_bufcpy.c  ft_bzero.c  ft_date_time.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lst_add_env.c  ft_lst_edit_env.c  ft_lst_env_new.c  ft_lst_get_env.c  ft_lst_rm_env.c  ft_lst_to_env.c  ft_lstadd.c  ft_lstaddend.c  ft_lstaddend_free.c  ft_lstdel.c  ft_lstdelone.c  ft_lstdup.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_free.c  ft_lstprintnbr.c  ft_lstprintstr.c  ft_lstring.c  ft_lstsplit.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_myputchar.c  (+64 more)
libnmotool/: Makefile
libnmotool/includes/: libnmotool.h
libnmotool/srcs/: check_lib_option.c  check_magic_number.c  dump_fat_header.c  dump_load_commands.c  dump_mach_header.c  dump_section_name.c  dump_segments.c  dump_static_lib.c  ft_swap_fat.c  init_libnmotool.c  mmap_file.c  read_option_flag.c
srcs_nm/: add_line_to_lst.c  ft_nm.c  get_segment_command.c  get_type_file.c  is_symtab.c  main.c  order_lst.c  parse_argv.c  parse_universel_binary.c  print_symbol_table.c
srcs_nm_tmp/: add_line_to_lst.c  parse_universel_binary.c
srcs_otool/: find_section_32.c  find_section_64.c  find_section_86.c  ft_otool.c  get_headers.c  get_type_file.c  main.c  parse_argv.c  print_sections.c
srcs_otool/a_option/: ft_otool_a.c
srcs_otool/f_option/: ft_otool_f.c
srcs_otool/h_option/: ft_otool_h.c
srcs_otool/t_option/: find_section_32.c  find_section_64.c  ft_otool_t.c  print_sections.c
srcs_otool_tmp/: find_section_86.c  main.c
test/: Makefile  libft_malloc.dylib  test_bin.sh  test_nm.sh  test_nmotool.sh  test_otool.sh  test_wrong_file.sh
test/dst/: test_facile_x64  test_facile_x86  test_moins_facile_x64  test_moins_facile_x86  test_x64  test_x86
test/src/: test.c  test_facile.c
